--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -106,7 +106,7 @@
     </div>
 
     <!-- Fourth Question <-->
-    <h2>  4.   How would you rate your stress levels</h2>
+    <h2>  4.  How easily do you get angry</h2>
     <div class="question">
       <div class="answer-choice">
         <button id="q4a1">
