--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -14,7 +14,7 @@
   <body>
     <h1>Mental Health Quiz!</h1>
     <div class="result">
-      <h2 id="result">
+      <h2>
         Please remember, this test should not be used as a form of diagnosis.
         The results down below are about common found within mental disorders.
         These symptoms do not 100% tell you whether you are suffering from a mental disorder.
@@ -357,7 +357,9 @@
         </button>
       </div>
     </div>
-    
+     <div class="result">
+      <h2 id="result">
+        Your result is...<h2>
     
  
     </div>
